--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/Map.tscn", "res://Scenes/Player.tscn", "res://Scenes/CloseGameButton.tscn")
-current_scene="res://Scenes/Map.tscn"
+current_scene="res://Scenes/CloseGameButton.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
