--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/PlayerController.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://export_presets.cfg")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/Map.tscn", "res://Scenes/Player.tscn", "res://Scenes/CloseGameButton.tscn")
-current_scene="res://Scenes/CloseGameButton.tscn"
+current_scene="res://Scenes/Player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
